# ra_provisional

./: README.md
limco/: .gitignore  analyse_parseddoc.ipynb  analyse_parseddoc.py  c_to_g.ipynb  limco.py  measure_lang.ipynb  note.py  pyproject.toml  test_ap.py  testdata.cabocha.txt  testdata.cabocha.txt.parsed.csv  testdata.csv  testdata.csv.measured.csv  testdata.txt
provisional_epibank/: jsonform.py
provisional_epibank/static/: app.js
provisional_epibank/static/css/: ustyle.css
provisional_epibank/views/: form.html
provisional_limco/: .gitignore  JP_README.md  compare.ipynb  env.txt  measure_lang.py  test.ipynb  testdata.csv  testdata.csv.measured.csv
provisional_limco/data/: 2017-11-JIWC.csv
provisional_limco/test_cli/: aireport_cli.py  airports.py  calculator_cli.py  calculator_cli2.py  canvas_cli.py  greeting.py  group.py  hello.py  hello_cli.py  mymath.py  mymath_cli.py  mymath_cli2.py  mymath_cli3.py  nargs_cli.py
testlmc/: testdata.csv.measured.csv
testlmc/tests/: test_testlmc.py
