[tool.poetry]
name = "limco"
version = "0.1.0"
description = ""
authors = ["Itaru Ota <ota.itaru.og4@is.naist.jp>"]


[tool.poetry.dependencies]
python = "^3.9"
fire = "pandas"
pandas = "^1.3.2"
numpy = "^1.21.2"
spacy = "^3.1.2"
ginza = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
limco = "limco:main"